--- a/pf-exporter-test/.settings/org.eclipse.wst.common.component
+++ b/pf-exporter-test/.settings/org.eclipse.wst.common.component
@@ -4,10 +4,13 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="pf-exporter-core-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/pf-exporter-core/pf-exporter-core">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="csv-exporter-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/csv-exporter/csv-exporter">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="pf-exporter-core-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/pf-exporter-core/pf-exporter-core">
+        <dependent-module archiveName="xml-exporter-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/xml-exporter/xml-exporter">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="context-root" value="pf-exporter-test"/>
